--- a/.github/workflows/upstream.yml
+++ b/.github/workflows/upstream.yml
@@ -8,6 +8,7 @@ jobs:
   upstream:
     permissions:
       contents: write
+      pull-requests: write
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -16,4 +17,6 @@ jobs:
       - run: git switch upstream 2>/dev/null || git switch -c upstream
       - run: git reset --hard upstream/main
       - run: git push --force origin upstream
-      
+      - run: gh pr create --fill
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
