--- a/.github/workflows/upstream.yml
+++ b/.github/workflows/upstream.yml
@@ -17,6 +17,6 @@ jobs:
       - run: git switch upstream 2>/dev/null || git switch -c upstream
       - run: git reset --hard upstream/main
       - run: git push --force origin upstream
-      - run: gh pr create --fill || true
+      - run: gh pr create --title "Upstream" --fill || true
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
