--- a/.github/workflows/upstream.yml
+++ b/.github/workflows/upstream.yml
@@ -16,7 +16,7 @@ jobs:
       - run: git fetch upstream
       - run: git switch upstream 2>/dev/null || git switch -c upstream
       - run: git reset --hard upstream/main
-      - run: git push --force origin upstream
+      - run: git push --force --set-upstream origin upstream
       - run: gh pr create --title "Upstream" --fill || true
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
